<resources>
    <string name="name_key">Name</string>
    <string name="game_name">Name</string>
    <string name="gamename_key">Name</string>
    <string name="key_region">Region</string>
    <string name="key_name">Name</string>
    <string name="key_description">Description</string>
    <string name="key_minteams">Min Teams</string>
    <string name="button_image">Add image</string>
    <string name="app_name">MAD_app</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="tournament_type">Type</string>
    <string name="max_teams">Max</string>
    <string name="tournament_date">Date</string>
    <string name="tournament_time">Time</string>
    <string name="tournament_edit">Edit</string>
    <string name="tournament_participants">Participants</string>
    <string name="tournament_edit_tournament">Edit Tournament</string>
    <string name="btn_update">Update</string>
    <string name="btn_browse">Browse</string>
    <string name="game_name_cod_mw">COD : MW</string>
    <string name="tournament_name_32">Team Death Match 5V5 #32</string>
    <string name="Tmatchdetails">Match Details</string>
    <string name="match_winner">Winner :</string>
    <string name="round1">Round 1</string>
    <string name="matches">Matches</string>
    <string name="vs">VS</string>
    <string name="matchcreate">Create Match</string>
    <string name="organizer">organizer</string>
    <string name="game">Game</string>
    <string name="tournament">Tournament</string>
    <string name="home">Home</string>
    <string name="tournament_create">Create Tounament</string>
    <string name="select_game">"Select Game : "</string>
    <string name="tournament_type_1">Tournament Type :</string>
    <string name="max_teams_1">Max Teams :</string>
    <string name="select_date_and_time">Select Date and Time :</string>
    <string name="tournament_background_image">"Tournament Background Image : "</string>
    <string name="tournament_31">Kill Confirmed 10V10 #31</string>
    <string name="organized_by">"Organized by : "</string>
    <string name="niimoh">Niimoh</string>
    <string name="accepted_teams">"Accepted Teams : "</string>
    <string name="ac_teams">5</string>
    <string name="starts_in">Starts in : 05:11:04</string>
    <string name="new_tournament">Add a new tournament</string>
    <string name="added_tournaments">Added Tournaments</string>
    <string name="tournament_name1">"Tournament Name : "</string>
    <string name="create">CREATE</string>
    <string name="cancel">Cancel</string>
    <string name="browse">BROWSE</string>
    <string name="organizer_niimoh">Organizer : Niimoh</string>
    <string name="num_of_teams_5">Num of Teams : 5</string>
    <string name="min_4">Min : 4</string>
    <string name="max_16">Max : 16</string>
    <string name="joined_teams">Joined Teams :</string>
    <string name="leader_user_name">Leader User Name</string>
    <string name="team_name">Team Name</string>
    <string name="game_region">Region</string>
    <string name="game_heading">Mobile Legends</string>
    <string name="des_heading">Description</string>
    <string name="des_para">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="overview_game">Overview</string>
    <string name="game_game">Game</string>
    <string name="max_team">Max Team</string>
    <string name="players_no">Number of players</string>
    <string name="game_ranking">Ranking</string>
    <string name="total_sub">Toatal subscriptions</string>
    <string name="create_heading">Create</string>
    <string name="enter_name">Enter the name</string>
    <string name="create_name">Name</string>
    <string name="create_region">Enter the region</string>
    <string name="create_des">Description</string>
    <string name="create_minteams" />
    <string name="create_min_teams">Min Teams</string>
    <string name="create_maxteams">Max Teams</string>
    <string name="create_image">Upload the image</string>
    <string name="org_game">Game</string>
    <string name="org_games">Games</string>
    <string name="add_games">Added games</string>
    <string name="add_a_game">Add a new game</string>
    <string name="cod_mv">COD MV</string>
    <string name="mobile_legends">Mobile Legends</string>
    <string name="valorant_name">Valorant</string>
    <string name="update_heading">Update</string>
    <string name="enter_gname">Enter the name of the game</string>
    <string name="enter_regiion">Enter the region</string>
    <string name="update_des">Description</string>
    <string name="update_minteams">Min Teams</string>
    <string name="update_maxteams">Max Teams</string>
    <string name="user_player">Player</string>
    <string name="user_Stats">Stats</string>
    <string name="user_subsgame">Subscribed games -13</string>
    <string name="user_Mobile_legends">Mobile Legends</string>
    <string name="user_Valorant">Valorant</string>
    <string name="user_TomCl">Tom Clansys\'s R6</string>
    <string name="user_playerinfo">Player Info</string>
    <string name="user_tournaments">Tournaments</string>
    <string name="user_mygames">My Games</string>
    <string name="user_Unsubscribe1">Unsubscribe</string>
    <string name="user_Unsubscribe">Unsubscribe</string>
    <string name="user_Cancle">Cancle</string>
    <string name="user_Update">Update</string>
    <string name="org_Edit">Edit</string>
    <string name="org_Delete">Delete</string>
    <string name="org_Edit1">Edit</string>
    <string name="create_Addimage">Add image</string>
    <string name="create_Submit">Submit</string>
    <string name="sub_button">400</string>
    <string name="reg_info">Asian</string>
    <string name="min_num">4</string>
    <string name="max_num">16</string>
    <string name="cod1">Call Of Duty</string>
    <string name="Mobile_led">Mobile Legends</string>
    <string name="Valorant1">Valorant</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="register_now">Register Now</string>
    <string name="organization">Organization</string>
    <string name="player">Player</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="next">Next</string>
    <string name="top_10">Top 10</string>
    <string name="ongoing">Ongoin</string>
    <string name="upcomming">Upcoming</string>
    <string name="select_team">"Select the Team : "</string>
    <string name="join_now">Join Now</string>
    <string name="brackets">Brackets</string>
    <string name="create_team">Create Team</string>
    <string name="team_descrption">Team Description</string>
    <string name="team_logo">Team Logo</string>
    <string name="teams">Teams</string>
    <string name="my_teams">My Teams</string>
    <string name="code_name_alpha">CodeNameAlpha</string>
    <string name="num_pl_20">Number of Players : 20</string>
    <string name="maches_won20">Matches Won : 20</string>
    <string name="shadow">Shadow</string>
    <string name="create_a_team">Create a Team</string>
    <string name="manage_teams">Manage Teams</string>
    <string name="team_description">Team Description</string>
    <string name="player_id">PlayerID</string>
    <string name="invite">Invite</string>
    <string name="team_players">Team Players:</string>
    <string name="remove">Remove</string>
    <string name="updatematch">Update Match</string>
    <string name="legends">Legends</string>
    <string name="blazing">Blazing</string>
    <string name="blazing_dragons">Blazing Dragons</string>
    <string name="watched_dragons">Watched Dragons</string>
    <string name="twin_dragons">Twin Dragons</string>
    <string name="dynamic_dragon">Dynamic Dragon</string>
    <string name="balling_dragons">Balling Dragons</string>
    <string name="flame_dragon">Flame Dragon</string>
    <string name="legendary_arthur">Legendary Arthur</string>
    <string name="legendary_merlin">Legendary Merlin</string>
    <string name="legendary_natsu">Legendary Natsu</string>
    <string name="legendary_luffy">Legendaty Luffy</string>
    <string name="legendary_simpsons">Legendary Simpsons</string>
    <string name="round">Round :</string>
    <string name="brackets_ws">Brackets :</string>
    <string name="teama">Team A :</string>
    <string name="teamb">Team B :</string>
    <string name="start_d_t">Starts Date and Time :</string>
    <string name="add_a_new_match">Add a New Match</string>
    <string name="swordy">Swordy</string>
    <string name="riders">Riders</string>
    <string name="platles">Platlets</string>
    <string name="doggies">Doggies</string>
    <string name="team_a_scores">Team A Scores</string>
    <string name="team_b_scores">Team B Scores</string>
    <string name="apexes">Apexes</string>
    <string name="knights">Knights</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>

    <string-array name="gamelist">
        <item>Select the Game</item>
        <item>COD : MW</item>
        <item>Valorant</item>
        <item>Leage of Legends</item>
        <item>Rainbow 6</item>

    </string-array>

    <string-array name="teamlist">
        <item>Select the team</item>
        <item>Team Alpha</item>
        <item>Colas</item>
        <item>Smokes</item>
        <item>6s</item>

    </string-array>
</resources>
