<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="362dp"
    android:layout_height="425dp"
    android:layout_marginStart="12dp"
    android:layout_marginBottom="52dp">


    <Button
        android:id="@+id/btn_create"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="@color/grey"
        android:text="@string/register_now" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="291dp"
        android:layout_height="439dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="-100dp"
        android:src="@drawable/killconfirmed" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="210dp"
        android:text="@string/game_name_cod_mw"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="290dp"
        android:text="@string/niimoh"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginTop="270dp"
        android:text="@string/organized_by"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="270dp"
        android:text="@string/accepted_teams"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="290dp"
        android:text="@string/ac_teams"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="370dp"
        android:text="@string/starts_in"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/cr_tournamet_topic5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="230dp"
        android:fontFamily="sans-serif"
        android:onClick="tournament_user_sel"
        android:text="@string/tournament_31"
        android:textSize="16sp"
        android:textStyle="bold" />

</androidx.cardview.widget.CardView>
