<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:backgroundTintMode="src_in"
    tools:context=".tournament_create">

    <!-- nav bar -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="394dp"
        android:layout_height="57dp"
        android:background="#424242"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="1dp"
        android:text="@string/game"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginBottom="1dp"
        android:text="@string/organizer"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginBottom="1dp"
        android:text="@string/tournament"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="1dp"
        android:text="@string/home"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_black" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="33dp"
        android:layout_height="27dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cupwhite" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="39dp"
        android:layout_height="29dp"
        android:layout_marginStart="122dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/console_black" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="39dp"
        android:layout_height="29dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/organizer_black" />

    <!-- nav bar ends -->

    <Button
        android:id="@+id/Btn_Mupdate"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/grey"
        android:text="@string/create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/t_bracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="96dp"
        android:text="@string/tournament_name1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/t_teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="176dp"
        android:text="@string/tournament_type_1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="176dp"
        android:text="@string/max_teams_1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="264dp"
        android:text="@string/select_date_and_time"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="211dp"
        android:layout_height="28dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="372dp"
        android:text="@string/tournament_background_image"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/cr_tournamet_topic"
        android:layout_width="187dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/tournament_create"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_game"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <EditText
        android:id="@+id/tname"
        android:layout_width="213dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/tournament_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_bracket" />

    <EditText
        android:id="@+id/ttype"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/tournament_type"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_bracket" />

    <EditText
        android:id="@+id/tdate"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tournament_date"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/ttime"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="368dp"
        android:ems="10"
        android:hint="@string/tournament_time"
        android:inputType="time"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tdate" />

    <Button
        android:id="@+id/button2"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/browse"
        android:textSize="12sp"
        app:iconTint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/Btn_MUcancel"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Spinner
        android:id="@+id/tselectgame"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/gamelist"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_round" />

    <EditText
        android:id="@+id/tmaxteams"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/max_teams"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

</androidx.constraintlayout.widget.ConstraintLayout>