<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_in"
    tools:context=".tournament_update">

    <!-- nav bar -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="394dp"
        android:layout_height="57dp"
        android:background="#424242"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="1dp"
        android:text="@string/game"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginBottom="1dp"
        android:text="@string/organizer"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginBottom="1dp"
        android:text="@string/tournament"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="1dp"
        android:text="@string/home"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_black" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="33dp"
        android:layout_height="27dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cupwhite" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="39dp"
        android:layout_height="29dp"
        android:layout_marginStart="122dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/console_black" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="39dp"
        android:layout_height="29dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/organizer_black" />

    <!-- nav bar ends -->

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:text="@string/game_name_cod_mw"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cr_tournamet_topic6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/tournament_31"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_create"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/grey"
        android:text="@string/btn_update"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/t_bracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="156dp"
        android:text="@string/tournament_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/t_teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="240dp"
        android:text="@string/tournament_type_1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="324dp"
        android:text="@string/select_date_and_time"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="227dp"
        android:layout_height="26dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="416dp"
        android:text="@string/tournament_background_image"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />

    <TextView
        android:id="@+id/cr_tournamet_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/tournament_edit_tournament"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="213dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/tournament_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_bracket" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/tournament_type"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_bracket" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/tournament_date"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="268dp"
        android:ems="10"
        android:hint="@string/tournament_time"
        android:inputType="time"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextDate" />

    <Button
        android:id="@+id/button2"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/btn_browse"
        android:textSize="14sp"
        app:iconTint="#424242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/Btn_cancel"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIconTint="@color/black"
        app:tabIndicatorColor="@color/black"
        app:tabRippleColor="@color/black"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/light_grey_2">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tournament_edit" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tournament_participants" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>